--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
+.btn{
+    @apply rounded-md m-4 p-1  bg-blue-700 border-2 border-green-400  hover:bg-blue-300 focus:border-black sm:hover:bg-red-400;
+}
 @tailwind utilities;
